# gitlab-migrate

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: api.md  configuration.md  troubleshooting.md  user-guide.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/gitlab_migrate/: __init__.py
src/gitlab_migrate/api/: __init__.py  client.py  exceptions.py  rate_limiter.py
src/gitlab_migrate/cli/: __init__.py  main.py
src/gitlab_migrate/config/: __init__.py  config.py
src/gitlab_migrate/git/: __init__.py  clone.py  lfs.py  operations.py  push.py
src/gitlab_migrate/migration/: __init__.py  engine.py  orchestrator.py  strategy.py
src/gitlab_migrate/models/: __init__.py  group.py  project.py  repository.py  user.py
src/gitlab_migrate/utils/: __init__.py  logging.py
tests/: test_api_client.py  test_cli.py  test_config.py
